# okf-weaver

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  README.md  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/src/okf_weaver/: __init__.py  budget.py  main.py  models.py
backend/src/okf_weaver/ai/: __init__.py  generate.py
backend/src/okf_weaver/ingest/: __init__.py  dbt_manifest.py  sql_ddl.py
backend/src/okf_weaver/okf/: __init__.py  serialize.py  validate.py
backend/tests/: test_ai.py  test_api.py  test_budget.py  test_ingest.py  test_models.py  test_okf_serialize.py  test_okf_validate.py
docs/: guide.md  spec.md
docs/superpowers/plans/: 2026-07-05-token-level-streaming.md
examples/: manifest.json  schema-mysql.sql  schema-postgres.sql  schema-sqlserver.sql  schema.sql
frontend/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  vitest.config.ts
frontend/app/: BundleTree.tsx  CodeEditor.tsx  ConfirmModal.test.tsx  ConfirmModal.tsx  ErdView.tsx  FileTree.tsx  MarkdownView.test.tsx  MarkdownView.tsx  TableNode.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  erd-graph.test.ts  erd-graph.ts  erd-layout.test.ts  erd-layout.ts  examples.ts  globals.css  layout.tsx  page.tsx  partialJson.test.ts  partialJson.ts  theme.ts  types.ts  useTheme.ts
