[project]
name = "okf-weaver"
version = "0.1.0"
description = "Generate curated, validated, portable OKF bundles from a warehouse schema."
readme = "README.md"
authors = [
    { name = "clnhrn", email = "herniacln@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "slowapi>=0.1.10",
    "sqlglot>=30.12.0",
    "uvicorn[standard]>=0.50.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: hits the real Anthropic API; skipped by default in CI",
]
